apps/talos-home/jellyseerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseerr.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain-noauth
          namespace: networking
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: jellyseerr-tls
